# Blackrust

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  blackrust.rules  mkdocs.yml  profiles.toml
.github/workflows/: rust.yml  xorg-dummy.conf
blackrust_lib/: Cargo.toml
blackrust_lib/src/: defaults.rs  file.rs  lib.rs  profile.rs  session.rs
docs/: 1_cdc.md  2_rapport_td.md  3_jdb.md  cdc.md  doc_technique.md  index.md  jdb.md  rapport_stage.md  rapport_td.md  rapport_tsem.md
docs/template/: _fonts.scss  back_cover.html  cover.scss  material.scss  styles.scss
src/: config_mgr.rs  dm.rs  main.rs  network_mgr.rs  remote_session_mgr.rs
src/remote_session_mgr/: remote_protocols.rs
src/remote_session_mgr/remote_protocols/: xdmcp.rs
src/web/: functions.js  index.html  package-lock.json  package.json  style.css
src/web/app/: Cargo.toml  index.html
src/web/app/src/: components.rs  event_bus.rs  form_components.rs  lib.rs  main.rs
src/web/app/src/components/: app.rs  main_card.rs  session_page.rs  settings_card.rs  tabs.rs  top_bar.rs
src/web/app/src/components/main_card/: banner.rs  connection_form.rs
src/web/app/src/components/main_card/connection_form/: search_dropdown.rs
src/web/app/src/components/main_card/connection_form/search_dropdown/: profile_option.rs
src/web/app/src/components/settings_card/: about.rs  conn_settings.rs  i18n_settings.rs  net_settings.rs  theme_settings.rs
src/web/app/src/components/settings_card/conn_settings/: profile_form.rs  profile_option.rs
src/web/app/src/components/settings_card/net_settings/: profile_form.rs  profile_option.rs
src/web/app/src/components/top_bar/: hostname.rs  settings_button.rs  time.rs
src/web/app/src/form_components/: select_input.rs  text_input.rs
