[package]
name = "blackrust"
version = "0.1.60"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "*"
#xrandr = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
image-base64 = "*"
regex = "1"
toml = "*"
itertools = "*"
dirs = "*"
byteorder = "*"
rstest = "*"
blackrust_lib = {path = "blackrust_lib"}

[[bin]]
name = "blackrust"
path = "src/dm.rs"