[package]
name = "blackrust"
version = "0.1.60"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-files = "*"
web-view = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
image-base64 = "*"
regex = "*"
toml = "*"
itertools = "*"
dirs = "*"
tokio = { version = "*", features = ["time", "rt", "rt-multi-thread", "macros", "net"] }
futures = "*"
blackrust_lib = {path = "blackrust_lib"}
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "*"

[dev-dependencies]
rstest = "*"
mockall = "*"

[[bin]]
name = "blackrust"
path = "src/dm.rs"