[package]
name = "blackrust_lib"
version = "0.1.60"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "*"
serde_derive = "*"
erased-serde = "*"
tokio = { version = "*", features = ["net"] }
async-trait = "*"