[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "*"
yew-router = "*"
stylist = { version = "*", features = ["yew_integration"]}
yew-feather = "*"
instant = { version = "0.1", features = [ "stdweb" ] }