[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "*"
yew-router = "*"
yew-agent = "*"
stylist = { version = "*", features = ["yew_integration"]}
yew-feather = "*"
chrono = { version = "*", features = ["wasmbind"] }
js-sys = "*"
web-sys = "*"
reqwasm = "0.5.0"
wasm-bindgen-futures = "*"
gloo-timers = "*"
serde = "*"
serde_json = "1.0"
wasm-logger = "*"
wasm-bindgen = "*"
log = "*"